# spiderfoot-neo4j

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
spiderfoot_neo4j/: db.py  sfgraph.py
