[tool.poetry]
name = "spiderfoot-neo4j"
version = "1.0.1"
description = "Import, visualize, and analyze SpiderFoot scans in Neo4j, a graph database"
authors = ["TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/blacklanternsecurity/spiderfoot-neo4j"
homepage = "https://github.com/blacklanternsecurity/spiderfoot-neo4j"

[tool.poetry.scripts]
sfgraph = 'spiderfoot_neo4j.sfgraph:go'

[tool.poetry.dependencies]
python = "^3.7"
py2neo = "^2021.1.5"
tld = "^0.12.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
